Fix overflow x on mobile

--- a/src/app/domain/pages/base/base.component.scss
+++ b/src/app/domain/pages/base/base.component.scss
@@ -57,7 +57,7 @@
     min-width: auto;
   }
   .content {
-    width: 90%;
+    width: 88%;
     margin-left: 12%;
   }
 }
